--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -153,5 +153,5 @@ jobs:
             repository_owner: ${{ github.repository_owner }}
             repository: ${{ github.repository }}
             untagged_only: true
-            owner_type: user # or org
+            owner_type: org # or user
             except_untagged_multiplatform: true
