--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ plugins {
     id "io.swagger.swaggerhub" version "1.3.2"
     id 'edu.sc.seis.launch4j' version '3.0.5'
     id 'com.diffplug.spotless' version '6.25.0'
-    id 'com.github.jk1.dependency-license-report' version '2.7'
+    id 'com.github.jk1.dependency-license-report' version '2.8'
 }
 
 import com.github.jk1.license.render.*
 
 group = 'stirling.software'
-version = '0.24.0-e'
+version = '0.25.0'
 
 // 17 is lowest but we support and recommend 21
 sourceCompatibility = '17'
@@ -20,7 +20,6 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
 }
-
 
 licenseReport {
     renderers = [new JsonReportRenderer()]
@@ -50,30 +49,31 @@ openApi {
 }
 
 launch4j {
-  icon = "${projectDir}/src/main/resources/static/favicon.ico"
+    icon = "${projectDir}/src/main/resources/static/favicon.ico"
 
-  outfile="Stirling-PDF.exe"
-  headerType="console"
-  jarTask = tasks.bootJar
+    outfile="Stirling-PDF.exe"
+    headerType="console"
+    jarTask = tasks.bootJar
 
-  errTitle="Encountered error, Do you have Java 21?"
-  downloadUrl="https://download.oracle.com/java/21/latest/jdk-21_windows-x64_bin.exe"
-  variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
-  jreMinVersion="17"
+    errTitle="Encountered error, Do you have Java 21?"
+    downloadUrl="https://download.oracle.com/java/21/latest/jdk-21_windows-x64_bin.exe"
+    variables=["BROWSER_OPEN=true", "ENDPOINTS_GROUPS_TO_REMOVE=CLI"]
+    jreMinVersion="17"
 
-  mutexName="Stirling-PDF"
-  windowTitle="Stirling-PDF"
+    mutexName="Stirling-PDF"
+    windowTitle="Stirling-PDF"
 
-  messagesStartupError="An error occurred while starting Stirling-PDF"
-  // messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
-  messagesJreVersionError="You are running the wrong version of Java, Please download Java 21."
-  messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 21."
-  messagesInstanceAlreadyExists="Stirling-PDF is already running."
+    messagesStartupError="An error occurred while starting Stirling-PDF"
+    // messagesJreNotFoundError="This application requires a Java Runtime Environment, Please download Java 17."
+    messagesJreVersionError="You are running the wrong version of Java, Please download Java 21."
+    messagesLauncherError="Java is corrupted. Please uninstall and then install  Java 21."
+    messagesInstanceAlreadyExists="Stirling-PDF is already running."
 }
 
 spotless {
     java {
-        target project.fileTree('src/main/java')
+        target 'src/main/java/**/*.java'
+        targetExclude 'src/main/java/stirling/software/SPDF/mykeystore.p12'
 
         googleJavaFormat('1.22.0').aosp().reorderImports(false)
 
@@ -94,8 +94,14 @@ dependencies {
     implementation("io.github.pixee:java-security-toolkit:1.1.3")
 
     implementation 'org.yaml:snakeyaml:2.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.0'
+    
+    implementation('org.springframework.boot:spring-boot-starter-web:3.3.0') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-jetty:3.3.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.3.0'
 
     if (System.getenv('DOCKER_ENABLE_SECURITY') != 'false') {
         implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
@@ -132,6 +138,7 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.16.1'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+    implementation 'org.sejda.imageio:webp-imageio:0.1.6'
 
     //general PDF
 
@@ -140,13 +147,18 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
 
-    implementation ('org.apache.pdfbox:pdfbox:3.0.2'){
+    implementation ('org.apache.pdfbox:pdfbox:3.0.2') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
 
-    implementation ('org.apache.pdfbox:xmpbox:3.0.2'){
+    implementation ('org.apache.pdfbox:xmpbox:3.0.2') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
+
+    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.10.1'
+    // https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
+    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
+
 
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
     implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
@@ -159,23 +171,25 @@ dependencies {
     // https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17
     implementation 'com.bucket4j:bucket4j_jdk17-core:8.12.1'
 
-	implementation 'com.fathzer:javaluator:3.0.3'
+	implementation 'com.fathzer:javaluator:3.0.4'
 
-	implementation 'com.itextpdf:itext-core:8.0.4'
+	// implementation 'com.itextpdf:itext-core:8.0.4'
 
     developmentOnly("org.springframework.boot:spring-boot-devtools:3.3.0")
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
     dependsOn 'spotlessApply'
+    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
 }
 compileJava {
     options.compilerArgs << '-parameters'
 }
 
-task writeVersion {
+tasks.register('writeVersion') {
     def propsFile = file('src/main/resources/version.properties')
     def props = new Properties()
     props.setProperty('version', version)
@@ -192,8 +206,6 @@ swaggerhubUpload {
     oas '3.0.0'  // The version of the OpenAPI Specification you're using
 }
 
-
-
 jar {
     enabled = false
     manifest {
@@ -207,6 +219,6 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-task printVersion {
-  println project.version
+tasks.register('printVersion') {
+    println project.version
 }
