--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -46,27 +46,17 @@ body:
       label: Anything in the logs that might be useful for us?
       description: For example, error message, or stack traces.
       render: txt
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
   - type: textarea
-    id: what-happened
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
-    validations:
-      required: true
+      label: Additional information
+      description: >
+        If you have any additional information for us, use the field below.
   - type: dropdown
     id: browsers
     attributes:
       label: What browsers are you seeing the problem on?
+      description: >
+        If known, otherwise leave blank.
       multiple: true
       options:
         - Firefox
