--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -16,8 +16,8 @@ body:
     validations:
       required: true
     attributes:
-      label: The problem
-      description: >
+      label: The Problem
+      description: |
         Describe the issue you are experiencing here. Tell us what you were trying to do and what happened.
 
         Provide a clear and concise description of what the problem is.
@@ -40,25 +40,25 @@ body:
   - type: input
     id: last-working-version
     attributes:
-      label: Last working version of Stirling-PDF
+      label: Last Working Version of Stirling-PDF
       placeholder: e.g., 0.0.1
-      description: >
+      description: |
         If known, please provide the last version where the issue did not occur. Otherwise, leave blank.
 
   - type: input
     id: url
     attributes:
-      label: Page where the problem occurred
+      label: Page Where the Problem Occurred
       placeholder: e.g., http://localhost:8080/pdf/pipeline
-      description: >
+      description: |
         If applicable, provide the URL where the issue occurred. Otherwise, leave blank.
 
   - type: textarea
     id: docker
     attributes:
-      label: Docker configuration
-      description: >
-        Provide your Docker configuration here. Remove any personal details.
+      label: Docker Configuration
+      description: |
+        Enter your Docker configuration here if it is relevant to the error. Remove any personal data. Otherwise, leave the field blank.
       render: txt
 
   - type: markdown
@@ -69,8 +69,8 @@ body:
   - type: textarea
     id: logs
     attributes:
-      label: Relevant log output
-      description: >
+      label: Relevant Log Output
+      description: |
         Provide any log output that might help us diagnose the issue, such as error messages or stack traces.
       render: txt
 
@@ -82,8 +82,8 @@ body:
   - type: textarea
     id: additional-info
     attributes:
-      label: Additional information
-      description: >
+      label: Additional Information
+      description: |
         If you have any additional information that might help us understand and resolve the issue, provide it here.
 
   - type: markdown
@@ -94,8 +94,8 @@ body:
   - type: dropdown
     id: browsers
     attributes:
-      label: Browsers affected
-      description: >
+      label: Browsers Affected
+      description: |
         If applicable, select the browsers where you are experiencing the issue. Otherwise, leave blank.
       multiple: true
       options:
@@ -107,8 +107,8 @@ body:
   - type: checkboxes
     id: terms
     attributes:
-      label: No duplicate of the issue
-      description: >
+      label: No Duplicate of the Issue
+      description: |
         Please confirm that you have searched for similar issues and none of them match your problem.
       options:
         - label: I have verified that there are no issues related to my problem.
