--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -1,5 +1,9 @@
 name: Deploy Javadoc
 
+env:
+  PIP_CACHE_DIR: .pip # Configure the PIP cache directory
+  DOCUMENTATIONS_BRANCH: test_java # Configure the documentations branch, which you will use for Github pages
+
 on:
   workflow_dispatch:
   push:
@@ -8,16 +12,65 @@ on:
       - main
 
 jobs:
-  publish:
+  build-push:
+    name: "Build & Push docs"
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # if you have a protection rule on your repository, you'll need to give write permission to the workflow.
+    
     steps:
-      - name: Deploy JavaDoc 🚀
-        uses: MathieuSoysal/Javadoc-publisher.yml@v2.5.0
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          javadoc-branch: test_java
-          java-version: 17
-          target-folder: test_java
-          project: gradle
+
+    # Checkout source code
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    # Cache dependencies for faster build time in future
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ./.pip
+        key: ${{ runner.os }}-modules-${{ hashFiles('./mkdocs-pip.txt') }}
+        
+    # Install dependencies for build process
+    - name: Install build dependencies
+      run: |
+        pip install -IU -r mkdocs-pip.txt
+
+    # Build docs
+    - name: Build documentations
+      run: |
+        mkdocs build
+
+    # Synchronize & push BUILD directory to docs branch
+    - name: Configure Git informations
+      run: |
+        git config --global user.name $GITHUB_ACTOR
+        git config --global user.email $GITHUB_ACTOR@users.noreply.github.com
+        
+
+    - name: Synchronize & push into docs branch
+      run: |
+        DEPLOY_BRANCH=$DOCUMENTATIONS_BRANCH
+        GIT_COMMIT=$(git rev-parse --short HEAD)
+
+        mkdir RELEASE
+        mv .git RELEASE/.git
+        cd RELEASE
+        echo "Checking out $DEPLOY_BRANCH"
+        git checkout -b $DEPLOY_BRANCH
+        git status
+        git stash && git stash drop
+        (git pull --depth 1 origin $DEPLOY_BRANCH --rebase -X theirs --allow-unrelated-histories) || (echo "Docs branch synced")
+        mv ./.git ../.git
+        cd ..
+
+        # Push build into the docs branch
+        mv docs-build BUILD
+        echo "Pushing build $GIT_COMMIT to $DEPLOY_BRANCH"
+        mv .git BUILD/.git
+        cd BUILD
+        git status
+        git add -A
+        git commit -m "Automated documentation build $GIT_COMMIT"
+        git push origin $DEPLOY_BRANCH
+        cd ..
+        
