--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -78,15 +78,20 @@ jobs:
           echo "Determining reference file..."
           REPO_OWNER=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.owner.login')
           REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')
+
           if grep -Fxq "src/main/resources/messages_en_GB.properties" changed_files.txt; then
               echo "Using PR branch reference file"
-              REFERENCE_FILE_CONTENT=$(gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=main --jq '.content')
-              echo "REFERENCE_FILE_CONTENT=$REFERENCE_FILE_CONTENT" >> $GITHUB_ENV
+              REFERENCE_FILE="pr-branch_reference_file_decoded.txt"
+              gh api repos/$REPO_OWNER/$REPO_NAME/contents/src/main/resources/messages_en_GB.properties?ref=${{ github.event.pull_request.head.ref }} \
+                --jq '.content' | base64 -d > $REFERENCE_FILE
           else
               echo "Using main branch reference file"
-              REFERENCE_FILE_CONTENT=$(gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main --jq '.content')
-              echo "REFERENCE_FILE_CONTENT=$REFERENCE_FILE_CONTENT" >> $GITHUB_ENV
+              REFERENCE_FILE="main-branch_reference_file_decoded.txt"
+              gh api repos/Ludy87/test_java/contents/src/main/resources/messages_en_GB.properties?ref=main \
+                --jq '.content' | base64 -d > $REFERENCE_FILE
           fi
+
+          echo "REFERENCE_FILE=$REFERENCE_FILE" >> $GITHUB_ENV
 
       - name: Show REFERENCE_FILE
         run: echo "Reference file is set to ${REFERENCE_FILE}"
